--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <body>
     <header>
       <img src="logo.png" alt="Logo" class="logo" />
+      <div class="hamburger" id="hamburger">&#9776;</div>
       <nav>
-        <ul>
+        <ul id="nav-menu">
           <li><a href="#" onclick="navigateTo('home')">Home</a></li>
           <li><a href="#" onclick="navigateTo('about')">About</a></li>
           <li><a href="#" onclick="navigateTo('resources')">Resources</a></li>
